; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c/extr_gpio-config.c_s3c_gpio_cfgpin.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/plat-s3c/extr_gpio-config.c_s3c_gpio_cfgpin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s3c_gpio_chip = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @s3c_gpio_cfgpin(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.s3c_gpio_chip*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call %struct.s3c_gpio_chip* @s3c_gpiolib_getchip(i32 %10)
  store %struct.s3c_gpio_chip* %11, %struct.s3c_gpio_chip** %6, align 8
  %12 = load %struct.s3c_gpio_chip*, %struct.s3c_gpio_chip** %6, align 8
  %13 = icmp ne %struct.s3c_gpio_chip* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %33

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.s3c_gpio_chip*, %struct.s3c_gpio_chip** %6, align 8
  %20 = getelementptr inbounds %struct.s3c_gpio_chip, %struct.s3c_gpio_chip* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sub i32 %18, %22
  store i32 %23, i32* %8, align 4
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @local_irq_save(i64 %24)
  %26 = load %struct.s3c_gpio_chip*, %struct.s3c_gpio_chip** %6, align 8
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @s3c_gpio_do_setcfg(%struct.s3c_gpio_chip* %26, i32 %27, i32 %28)
  store i32 %29, i32* %9, align 4
  %30 = load i64, i64* %7, align 8
  %31 = call i32 @local_irq_restore(i64 %30)
  %32 = load i32, i32* %9, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %17, %14
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local %struct.s3c_gpio_chip* @s3c_gpiolib_getchip(i32) #1

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @s3c_gpio_do_setcfg(%struct.s3c_gpio_chip*, i32, i32) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
